<resources>
    <string name="app_name">AIP</string>
    <string name="home_title">Home</string>
    <string name="show_all_apps">All</string>
    <string name="menu_wallpaper">Wallpaper</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="wallpaper_instructions">Tap picture to set portrait wallpaper</string>
    <string name="low_battery_text">In order to ensure the normal use of projection, please charge more than 15% of the electricity first.</string>
    <string name="click_hdmi_too_fast">In the process of opening or closing the projection, please wait a moment.</string>
    <string name="app_not_exist">App is not installed !</string>
    <string name="no_apps">No Apps</string>
    <string name="apps_title_movie">Movie</string>
    <string name="apps_title_game">Game</string>
    <string name="apps_title_social">Social</string>
    <string name="apps_title_all">All Apps</string>
    <string name="not_match_app_str">No Apps</string>

    <string name="apps_movie">Prime Video</string>
    <string name="apps_game">YouTube</string>
    <string name="apps_social">Aptoide TV</string>
    <string name="apps_file">Netflix</string>

    <string name="apps_air_link">Wireless Screen</string>
    <string name="apps_office">Files</string>
    <string name="apps_settings">Settings</string>
    <string name="apps_more_app">Apps</string>
</resources>
